--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,10 @@ add_executable(VFtpClient
         src/logger.cpp
         src/common.h
         src/ftp_status_handler.cpp
-        src/ftp_status_handler.h)
+        src/ftp_status_handler.h
+        src/util.cpp
+        src/util.h
+        src/util.h)
 target_link_libraries(VFtpClient
         Qt::Core
         Qt::Gui
