--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,9 @@ add_executable(VFtpClient
         src/common.h
         src/util.cpp
         src/util.h
+        src/res.qrc
+        src/task.cpp
+        src/task.h
 )
 target_link_libraries(VFtpClient
         Qt::Core
